# minfft

./: CMakeLists.txt  LICENSE  Makefile  README  README.md  dft.c  dft.h  dftf.c  dftf.h  minfft.F03  minfft.c  minfft.f03  minfft.f03.template  minfft.h  minfft.h.template  test_fft.c
bench/: accuracy.gnuplot  chk.c  chk.sh  doit-minfft-mi.c  doit-minfft.c  doit-ne10.c  fftw.speed  fftw3-mi.accuracy  fftw3-mi.speed  kissfft.accuracy  kissfft.speed  minfft-mi.speed  minfft.accuracy  minfft.speed  speed.gnuplot
benchmarks/: accuracy.gnuplot  fftw.accuracy  fftw.speed  kissfft.accuracy  kissfft.speed  minfft.accuracy  minfft.speed  minibenchmark  speed.gnuplot
cmake/: target_fast_math.cmake  target_optimizations.cmake
docs/: fourier.tex  math-details.md  minfft.tex
machdep/neon-single/: mkaux_dft_1d.c  rs_dft_1d.s  rs_invdft_1d.s
machdep/neon-single/bench/: accuracy.gnuplot  doit-fftw3-neon.c  doit-minfft-neon.c  fftw.speed  fftw3-neon.accuracy  fftw3-neon.speed  minfft-neon.accuracy  minfft-neon.speed  ne10.accuracy  (+2 more)
machdep/sse3-double/: rs_dft_1d.s  rs_invdft_1d.s
machdep/sse3-single/: Makefile  minfft.f03  minfft.h  mkaux_dft_1d.c  rs_dft_1d.s  rs_invdft_1d.s
tests/: acc-dct2-dct3-1d  acc-dct2-dct3-2d  acc-dct2-dct3-3d  acc-dct4-dct4-1d  acc-dct4-dct4-2d  acc-dct4-dct4-3d  acc-dft-invdft-1d  acc-dft-invdft-2d  acc-dft-invdft-3d  acc-dst2-dst3-1d  acc-dst2-dst3-2d  acc-dst2-dst3-3d  acc-dst4-dst4-1d  acc-dst4-dst4-2d  acc-dst4-dst4-3d  accuracy.gnuplot  chk.c  chkdft.F95  chkdft.c  chkdft.sh  chkdft.sh-sse3d  chkdft.sh-sse3s  chkdftf.c  do  doit-fftw3-mi.c  doit-minfft-master.c  doit-minfft-mi.c  fftw3-mi.accuracy  fftw3-mi.speed  fftw3.f03  kissfft.accuracy  kissfft.speed  minfft-master.accuracy  minfft-master.speed  minfft-mi.accuracy  minfft-mi.speed  perf-dct2  perf-dct2-1d  perf-dct2-1d-fftw  perf-dct2-2d  (+95 more)
tests/results/: CMP_FFTW_D1_DCT2  CMP_FFTW_D1_DCT3  CMP_FFTW_D1_DCT4  CMP_FFTW_D1_DFT  CMP_FFTW_D1_DST2  CMP_FFTW_D1_DST3  CMP_FFTW_D1_DST4  CMP_FFTW_D1_INVDFT  CMP_FFTW_D1_INVREALDFT  CMP_FFTW_D1_REALDFT  CMP_FFTW_D2_DCT2  CMP_FFTW_D2_DCT3  CMP_FFTW_D2_DCT4  CMP_FFTW_D2_DFT  CMP_FFTW_D2_DST2  CMP_FFTW_D2_DST3  CMP_FFTW_D2_DST4  CMP_FFTW_D2_INVDFT  CMP_FFTW_D2_INVREALDFT  CMP_FFTW_D2_REALDFT  CMP_FFTW_D3_DCT2  CMP_FFTW_D3_DCT3  CMP_FFTW_D3_DCT4  CMP_FFTW_D3_DFT  CMP_FFTW_D3_DST2  CMP_FFTW_D3_DST3  CMP_FFTW_D3_DST4  CMP_FFTW_D3_INVDFT  CMP_FFTW_D3_INVREALDFT  CMP_FFTW_D3_REALDFT  CMP_KISS_D1_DFT  CMP_KISS_D1_INVDFT  CMP_KISS_D1_INVREALDFT  CMP_KISS_D1_REALDFT  CMP_KISS_D2_DFT  CMP_KISS_D2_INVDFT  CMP_KISS_D2_INVREALDFT  CMP_KISS_D2_REALDFT  CMP_KISS_D3_DFT  CMP_KISS_D3_INVDFT  (+92 more)
tools/: badperf.sh  chk.c  chk.sh  chkdft.F03  chkdft.F95  chkdft.c  chkdft.sh  chkperf.c  chkperf.sh  do  doit-kissfft.c  doit.c  doitall-fftw.c  doitall.c  doitr2r-fftw.c  doitr2r.c  fftw.accuracy  fftw.f03  mkbench.sh  mkrelease.sh  pocketfft.accuracy  pocketfft.speed  speed.gnuplot
(+57 files in other folders)
